@@ -192,6 +192,8 @@ several `FSD` notifications into one executed action. [PR #3097]
      updated many help messages. The `configure` script logs should now clarify
      where CFLAGS/LIBS/LDFLAGS values come from ('pkg-config', 'default', user
      provided 'confargs' etc.) [#3140]
+   * Added configure script options for 'libregex' tuning, just so it is on par
+     with our other optional dependencies. [#3140]
 
  - Fixed CI recipes for PyPI publication of PyNUT(Client) module to also
    include the source distribution (was posted for NUT v2.8.1 and v2.8.2
